# smart-tab-grouping

./: .gitignore  README.md  pyproject.toml
data/: augmented_processed.csv  multi_shot_topic_examples.json
data/extract/: fine_tuning_data__with_none__common_crawl_2025-02-23_08-18.csv  topic_topic_fine_tuning_data__2025-02-21_16-50.csv  topic_topic_fine_tuning_data__2025-02-21_16-50__filtered.csv  topic_topic_fine_tuning_data__common_crawl_2025-02-23_08-18.csv  topic_topic_fine_tuning_data__common_crawl_2025-02-23_08-18__filtered.csv
data/individual_tests/: pittsburgh_trip.json  simple_tab_2.json  single_tab_validation.csv
data/suggest_datasets/: synthetic_processed.csv
data/synthetic_data_tasks/: email_subtopics.json  news_subtopics.json  shopping_subtopics.json  travel_subtopics.json  user_locations.json
data/synthetic_datasets/: gen_test_set_1__10_4.csv  gen_test_set_3_12_9_user_locs.csv
data/topic_model_fine_tune/: topic_fine_tuning_data__01_05__grouped_with_hints.csv
notebooks/: Analyze Clusters.ipynb  AnalyzeTrainingData.ipynb  Benchmarking.ipynb  Clustering_TestBed.ipynb  Common Crawl.ipynb  Directed Training Clusters.ipynb  Distill.ipynb  Extractive Test.ipynb  Gen Dissimilar Titles & Keywords.ipynb  Onnx.ipynb  Rouge Scores.ipynb  STG_Logistic_Regression_Domain.ipynb  SimplifyMLTopics.ipynb
src/: apply_label_hints.py  cleanup_ml_gen.py  embeddings_streamlit.py  filter_words.py  gen_annotation_data.py  suggest_cls_streamlit.py  tab_grouping_streamlit.py  tab_title_tuning_data.py
src/jobs/: Readme.md  TuneGenTopicModel.py  distill_t5.py  tune_t5.py  (+5 more)
(+14 files in other folders)
